[UI] [VtoViewer] fix instruction z-index

--- a/app/components/vto/vto.css
+++ b/app/components/vto/vto.css
@@ -248,6 +248,7 @@
 }
 .instruction.show {
   opacity: 1;
+  z-index: 12;
 }
 .instruction-text {
   font-size: 1.1em;
